--- a/src/App.scss
+++ b/src/App.scss
@@ -19,13 +19,20 @@ $colors: (
   background: linear-gradient($arg, map-get($colors, Light-Violet), map-get($colors, Magenta));
 }
 
+html {
+  height: 100%;
+  overflow-x: hidden;
+}
+
 body {
+  position: relative;
   margin: 0;
   background: #fafafa;
   font-family: "Rubik", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 ::placeholder {
@@ -33,7 +40,6 @@ body {
 }
 
 main {
-  position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   height: 100dvh;
@@ -49,6 +55,11 @@ main {
     z-index: -10;
     width: $blob-width;
     height: 87dvh;
+
+    @media screen and (max-width: 430px) {
+      height: 50dvh;
+      width: 100dvw;
+    }
   }
 
   &::before {
@@ -56,6 +67,10 @@ main {
     left: $blob-lateral;
     @include backgroundGradient(0deg);
     border-radius: 0 0 50rem 50rem;
+
+    @media screen and (max-width: 430px) {
+      left: -25%;
+    }
   }
 
   &::after {
@@ -64,6 +79,15 @@ main {
     background: #f9f4fa;
     border-radius: 100rem 100rem 0 0;
   }
+
+  @media screen and (max-width: 430px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-y: scroll;
+    bottom: 0;
+  }
 }
 
 .phone-section {
@@ -71,6 +95,16 @@ main {
   place-content: center;
   justify-content: end;
   margin-right: 12rem;
+
+  @media screen and (max-width: 376px) {
+    margin-top: 16rem !important;
+  }
+
+  @media screen and (max-width: 430px) {
+    scale: 0.75;
+    margin: 0;
+    margin-top: 5rem;
+  }
 }
 
 .phone {
@@ -281,11 +315,25 @@ main {
   align-items: start;
   justify-content: start;
 
+  @media screen and (max-width: 430px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    // scale: 0.75;
+    width: 100%;
+    padding-bottom: 2rem;
+  }
+
   .title {
     font-size: 4rem;
     font-weight: 500;
     color: map-get($colors, heading);
     margin: 0;
+
+    @media screen and (max-width: 430px) {
+      font-size: 3rem;
+    }
   }
 
   .summary {
@@ -293,6 +341,19 @@ main {
     width: 42rem;
     font-size: 1.5rem;
     line-height: 1.75;
+
+    @media screen and (max-width: 376px) {
+      font-size: 16px !important;
+      width: 22rem !important;
+      margin-inline: 72rem !important;
+      padding-inline: 1rem !important;
+    }
+
+    @media screen and (max-width: 430px) {
+      font-size: 17px;
+      text-align: center;
+      width: 21rem;
+    }
   }
 }
 
@@ -315,32 +376,16 @@ input[type="radio"] {
   }
 }
 
-.slide-top1 {
-  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation-delay: 1s;
+@mixin slide-top($index) {
+  .slide-top#{$index} {
+    animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+    animation-delay: #{($index - 1) * 2}s;
+  }
 }
 
-.slide-top2 {
-  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation-delay: 2s;
+@for $i from 1 through 5 {
+  @include slide-top($i);
 }
-
-.slide-top3 {
-  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation-delay: 4s;
-}
-
-.slide-top4 {
-  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation-delay: 6s;
-}
-
-.slide-top5 {
-  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation-delay: 8s;
-}
-
-
 
 @keyframes slide-top {
   0% {
