--- a/src/App.scss
+++ b/src/App.scss
@@ -115,7 +115,7 @@ main {
   border-radius: 3rem;
   width: 22rem;
   height: fit-content;
-  filter: drop-shadow(1rem 1rem 2rem #00000012);
+  box-shadow: 1rem 1rem 2rem #00000012;
   z-index: 20;
   overflow: hidden;
 
