added more advanced chat animation

--- a/src/App.scss
+++ b/src/App.scss
@@ -201,6 +201,7 @@ main {
     .phone-body {
       padding: 1rem;
       padding-bottom: 0;
+      height: 528px;
 
       .received-messages-container {
         display: flex;
@@ -403,12 +404,8 @@ input[type="radio"] {
 @mixin slide-top($index) {
   .slide-top#{$index} {
     animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-    animation-delay: #{($index - 1) * 2}s;
+    // animation-delay: #{($index - 1) * 2}s;
   }
-}
-
-@for $i from 1 through 5 {
-  @include slide-top($i);
 }
 
 @keyframes slide-top {
@@ -417,5 +414,93 @@ input[type="radio"] {
   }
   100% {
     transform: translateY(0);
+  }
+}
+
+@for $i from 1 through 5 {
+  @include slide-top($i);
+}
+
+/**
+ * ==============================================
+ * Dot Pulse
+ * ==============================================
+ */
+
+.stage {
+  margin-left: 1rem;
+  background: #ede4f4;
+  width: fit-content;
+}
+
+.dot-pulse {
+  position: relative;
+  left: -9999px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: #9880ff;
+  color: #9880ff;
+  box-shadow: 9999px 0 0 -5px;
+  animation: dot-pulse 1.5s infinite linear;
+  animation-delay: 0.25s;
+}
+.dot-pulse::before,
+.dot-pulse::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: #9880ff;
+  color: #9880ff;
+}
+.dot-pulse::before {
+  box-shadow: 9984px 0 0 -5px;
+  animation: dot-pulse-before 1.5s infinite linear;
+  animation-delay: 0s;
+}
+.dot-pulse::after {
+  box-shadow: 10014px 0 0 -5px;
+  animation: dot-pulse-after 1.5s infinite linear;
+  animation-delay: 0.5s;
+}
+
+@keyframes dot-pulse-before {
+  0% {
+    box-shadow: 9984px 0 0 -5px;
+  }
+  30% {
+    box-shadow: 9984px 0 0 2px;
+  }
+  60%,
+  100% {
+    box-shadow: 9984px 0 0 -5px;
+  }
+}
+@keyframes dot-pulse {
+  0% {
+    box-shadow: 9999px 0 0 -5px;
+  }
+  30% {
+    box-shadow: 9999px 0 0 2px;
+  }
+  60%,
+  100% {
+    box-shadow: 9999px 0 0 -5px;
+  }
+}
+@keyframes dot-pulse-after {
+  0% {
+    box-shadow: 10014px 0 0 -5px;
+  }
+  30% {
+    box-shadow: 10014px 0 0 2px;
+  }
+  60%,
+  100% {
+    box-shadow: 10014px 0 0 -5px;
   }
 }
